<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loader_set_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loader.json"
        app:lottie_loop="true" />


    <TextView
        android:id="@+id/tv_RecoveryPass_Title_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_menu"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/new_password_title"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/top_menu" />


    <TextView
        android:id="@+id/tv_instructions_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/tv_RecoveryPass_Title_2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/instructions_new_password"
        android:textColor="@color/negro"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_RecoveryPass_Title_2" />

    <EditText
        android:id="@+id/et_recovery_code"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:singleLine="true"
        android:layout_below="@id/tv_instructions_2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/label"
        android:hint="@string/hint_recovery_code"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/negro"
        android:textColorHint="@color/lightGray"
        android:textCursorDrawable="@null"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_instructions_2" />

    <EditText
        android:id="@+id/et_password_recovery"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/et_recovery_code"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/label"
        android:hint="@string/hint_new_pass"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/negro"
        android:textColorHint="@color/lightGray"
        android:textCursorDrawable="@null"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_recovery_code" />

    <EditText
        android:id="@+id/et_password_recovery_confirm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/et_password_recovery"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/label"
        android:hint="@string/hint_new_pass_confirmation"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/negro"
        android:textColorHint="@color/lightGray"
        android:textCursorDrawable="@null"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_recovery" />

    <Button
        android:id="@+id/btn_update_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/et_password_recovery_confirm"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btn_secundary"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/create_a_new_password"
        android:textColor="@color/negro"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <include
        android:id="@+id/top_menu"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="?attr/actionBarSize"
        layout="@layout/yonusa_toolbar"/>

</androidx.constraintlayout.widget.ConstraintLayout>
