<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/pseudo_white">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loader_recovery_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_send_user_invitation"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loader.json"
        app:lottie_loop="true" />


    <TextView
        android:id="@+id/tv_AddUser_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_menu"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/title_add_user"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/top_menu" />


    <TextView
        android:id="@+id/tv_addUserInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_AddUser_Title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:lines="2"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/instructions_add_user"
        android:textColor="@color/negro"
        android:textColorHint="#75ffffff"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_AddUser_Title" />


    <EditText
        android:id="@+id/et_guest_alias"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@id/tv_addUserInstructions"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/label"
        android:hint="@string/guest_alias"
        android:inputType="textAutoComplete"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/negro"
        android:textColorHint="@color/lightGray"
        android:textCursorDrawable="@null"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_addUserInstructions" />


    <EditText
        android:id="@+id/et_guest_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@id/et_guest_alias"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/label"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/negro"
        android:textColorHint="@color/lightGray"
        android:textCursorDrawable="@null"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/et_guest_alias"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btn_send_user_invitation"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/et_guest_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btn_primary"
        android:elevation="1dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="25dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <include
        android:id="@+id/top_menu"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="?attr/actionBarSize"
        layout="@layout/yonusa_toolbar"/>

</androidx.constraintlayout.widget.ConstraintLayout>