<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loader_recovery_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loader.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/tv_RecoveryPass_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_menu"
        android:gravity="center"
        android:text="@string/title_recovery_password"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@+id/top_menu" />


    <TextView
        android:id="@+id/tv_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_RecoveryPass_Title"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:lines="2"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/tv_instructions"
        android:textColor="@color/negro"
        android:textColorHint="#75ffffff"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_RecoveryPass_Title" />

    <EditText
        android:id="@+id/ti_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/tv_instructions"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/label"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/negro"
        android:textColorHint="@color/lightGray"
        android:textCursorDrawable="@null"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_instructions" />

    <Button
        android:id="@+id/btn_send_recovery_request"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/ti_email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btn_secundary"
        android:elevation="1dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/send"
        android:textColor="@color/negro"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <include
        android:id="@+id/top_menu"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="?attr/actionBarSize"
        layout="@layout/yonusa_toolbar"/>

</androidx.constraintlayout.widget.ConstraintLayout>
