<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.add_devices.set_up_devices.SelectWifiNetsActivity">

    <include
        android:id="@+id/top_menu"
        layout="@layout/yonusa_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loader_step2"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:visibility="gone"
        app:lottie_fileName="loader.json" />

    <TextView
        android:id="@+id/tv_select_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_menu"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/title_select_network"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="21sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_select_network_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_select_network"
        android:layout_marginTop="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/string_instructions_get_networks"
        android:textAlignment="center"
        android:textColor="@color/negro"
        android:textSize="16sp"
        android:textStyle="normal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_networks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_select_network_instructions"
        android:layout_above="@+id/btn_reloader"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:clipToPadding="false"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/btn_reloader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/string_update_networks"
        android:textAllCaps="false"
        android:textColor="@color/negro"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_secundary"

        android:layout_alignParentBottom="true"/>

</RelativeLayout>